# mylearning

./: README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: exp1.toml
src/research_assistant/: __init__.py
src/research_assistant/cli/: main.py
src/research_assistant/configs/: config_schema.py
src/research_assistant/data/: __init__.py  loader.py
src/research_assistant/experiments/: runner.py
src/research_assistant/inference/: __init__.py  accelerate_runner.py  vllm_engine.py
src/research_assistant/retrieval/: __init__.py  langchain_pipeline.py  llamaindex_pipeline.py
src/research_assistant/utils/: __init__.py  errors.py  parallel.py  typing.py
